--- a/src/_listBase.scss
+++ b/src/_listBase.scss
@@ -165,6 +165,14 @@
     color: var(--sapList_FooterTextColor);
     font-size: $fd-list-normal-font-size;
     height: 2rem;
+
+    &_right {
+      float: right;
+    }
+
+    &_left {
+      float: left;
+    }
   }
 
   &__bold {
