updaitng the nav menu to list
updaitng the nav menu to list

Update multi-combo-box.stories.storyshot

Update stories/multi-combo-box/multi-combo-box.stories.js

Co-authored-by: Jacob Devera <jacob.devera@concur.com>

Update stories/multi-combo-box/multi-combo-box.stories.js

Co-authored-by: Jacob Devera <jacob.devera@concur.com>

Update stories/multi-combo-box/multi-combo-box.stories.js

Co-authored-by: Jacob Devera <jacob.devera@concur.com>

Update stories/multi-combo-box/multi-combo-box.stories.js

Co-authored-by: Jacob Devera <jacob.devera@concur.com>

Update stories/multi-combo-box/multi-combo-box.stories.js

Co-authored-by: Jacob Devera <jacob.devera@concur.com>

Update stories/multi-combo-box/multi-combo-box.stories.js

Co-authored-by: Jacob Devera <jacob.devera@concur.com>

Update stories/multi-combo-box/multi-combo-box.stories.js

Co-authored-by: Jacob Devera <jacob.devera@concur.com>

Update stories/multi-combo-box/multi-combo-box.stories.js

Co-authored-by: Jacob Devera <jacob.devera@concur.com>

Update stories/multi-combo-box/multi-combo-box.stories.js

Co-authored-by: Jacob Devera <jacob.devera@concur.com>

Update stories/multi-combo-box/multi-combo-box.stories.js

Co-authored-by: Jacob Devera <jacob.devera@concur.com>

Update stories/multi-combo-box/multi-combo-box.stories.js

Co-authored-by: Jacob Devera <jacob.devera@concur.com>

Update stories/multi-combo-box/multi-combo-box.stories.js

Co-authored-by: Jacob Devera <jacob.devera@concur.com>

Update stories/multi-combo-box/multi-combo-box.stories.js

Co-authored-by: Jacob Devera <jacob.devera@concur.com>

Update stories/multi-combo-box/multi-combo-box.stories.js

Co-authored-by: Jacob Devera <jacob.devera@concur.com>

--- a/src/_listBase.scss
+++ b/src/_listBase.scss
@@ -166,11 +166,11 @@
     font-size: $fd-list-normal-font-size;
     height: 2rem;
 
-    &_right {
+    &--right {
       float: right;
     }
 
-    &_left {
+    &--left {
       float: left;
     }
   }
