--- a/src/theming/sap_fiori_3_dark.scss
+++ b/src/theming/sap_fiori_3_dark.scss
@@ -110,4 +110,8 @@
 
   /** Badge on Button */
   --fdBadgeButton_Border_Color: var(--sapContent_BadgeBackground);
+
+  /** Flexible Column Layout */
+  --fdFlexibleColumnLayoutToggleImageColor: var(--sapHighlightColor);
+  --fdFlexibleColumnLayoutBorder: none;
 }
